fixed 7/9 score deployment